--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /final/Sensor\ Network\ Virtualization\ for\ Cloud-based\ Remote\ Sensing.aux
+/final/Sensor\ Network\ Virtualization\ for\ Cloud-based\ Remote\ Sensing.log
+
