--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /final\ paper/Sensor\ Network\ Virtualization\ for\ Cloud-based\ Remote\ Sensing.aux
 /final paper/Sensor Network Virtualization for Cloud-based Remote Sensing.log
 *.pyc
+
+*.pyc
