update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 *.pyc
 
 *.pyc
+
+final paper/Sensor Network Virtualization for Cloud-based Remote Sensing.pdf
+
+final paper/Sensor Network Virtualization for Cloud-based Remote Sensing.synctex.gz
