--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-/final\ paper/Sensor\ Network\ Virtualization\ for\ Cloud-based\ Remote\ Sensing.aux
-/final paper/Sensor Network Virtualization for Cloud-based Remote Sensing.log
 *.pyc
 
+
+*.aux
+
+*.log
+
+paper/Sensor Network Virtualization for Cloud-based Remote Sensing.pdf
+
+paper/Sensor Network Virtualization for Cloud-based Remote Sensing.synctex.gz
