--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 paper/Sensor Network Virtualization for Cloud-based Remote Sensing.pdf
 
 paper/Sensor Network Virtualization for Cloud-based Remote Sensing.synctex.gz
+
+analysis/stats.docx
