--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
 *.pyc
-
-
+*.blg
 *.aux
-
 *.log
-
 paper/Sensor Network Virtualization for Cloud-based Remote Sensing.pdf
-
 paper/Sensor Network Virtualization for Cloud-based Remote Sensing.synctex.gz
-
 analysis/stats.docx
