--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,5 @@
 *.bbl
 *.aux
 *.log
-paper/Sensor Network Virtualization for Cloud-based Remote Sensing.pdf
-paper/Sensor Network Virtualization for Cloud-based Remote Sensing.synctex.gz
+*.synctex.gz
 analysis/stats.docx
